--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
+version: "3"
+
 services:
   model-service:
     image: ghcr.io/remla2024-team9/model-service:latest
     ports:
       - "5000:5000"
     networks:
-      - app-network
+      - my-net
 
   app-service:
     image: ghcr.io/remla2024-team9/app-service:latest
@@ -13,17 +15,17 @@ services:
     depends_on:
       - model-service
     networks:
-      - app-network
+      - my-net
 
   app-frontend:
     image: ghcr.io/remla2024-team9/app-frontend:latest
     ports:
       - "3000:3000"
-    environment:
-      - REACT_APP_API_URL=http://app-service:8080
+    depends_on:
+      - app-service
     networks:
-      - app-network
-  
+      - my-net
+
 networks:
-  app-network:
+  my-net:
     driver: bridge
