works on my machine
windows wsl

--- a/inventory.cfg
+++ b/inventory.cfg
@@ -1,2 +1,2 @@
 [controller]
-vagrant@192.168.57.10 ansible_ssh_user=vagrant ansible_ssh_pass=vagrant
+controller ansible_host=192.168.57.10 ansible_port=2201 ansible_ssh_user=vagrant ansible_ssh_pass=vagrant
