kubernetes node doesn't want to connect to controller

--- a/inventory.cfg
+++ b/inventory.cfg
@@ -1,2 +1,6 @@
 [controller]
 controller ansible_host=192.168.57.10 ansible_port=2201 ansible_ssh_user=vagrant ansible_ssh_pass=vagrant
+
+[workers]
+worker1 ansible_host=192.168.57.11 ansible_port=2201 ansible_ssh_user=vagrant ansible_ssh_pass=vagrant
+worker2 ansible_host=192.168.57.12 ansible_port=2201 ansible_ssh_user=vagrant ansible_ssh_pass=vagrant
