--- a/playbook_controller.yml
+++ b/playbook_controller.yml
@@ -1,95 +1,54 @@
 ---
-- name: Set up the Kubernetes Controller Node
-  hosts: controller
-  become: yes
+- hosts: controller
+  become: true
   tasks:
-    - name: Install required packages
-      ansible.builtin.apt:
-        name:
-          - apt-transport-https
-          - ca-certificates
-          - curl
-          - software-properties-common
-        state: present
+    - name: Update apt package index
+      apt:
+        update_cache: true
 
-    - name: Add Docker’s official GPG key
-      ansible.builtin.apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
+    - name: Install Docker
+      apt:
+        name: docker.io
+        state: latest
 
-    - name: Add Docker repository
-      ansible.builtin.apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-        state: present
-
-    - name: Install Docker Engine
-      ansible.builtin.apt:
-        name: docker-ce
-        state: present
-        update_cache: yes
-
-    - name: Ensure Docker service is running
-      ansible.builtin.service:
-        name: docker
-        state: started
-        enabled: yes
-
-    - name: Add vagrant user to docker group
+    - name: Add Vagrant user to Docker group
       user:
         name: vagrant
         groups: docker
-        append: yes
+        append: true
+
+    - name: Install Minikube from latest release
+      apt:
+        deb: "https://storage.googleapis.com/minikube/releases/latest/minikube_latest_amd64.deb"
+        state: present
     
-    - name: Ensure Docker group changes take effect
-      shell: newgrp docker || true
+    - name: Get latest kubectl version
+      command: curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt
+      register: kubectl_version
 
-    - name: Install k3d
-      ansible.builtin.shell:
-        cmd: curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | bash
-      register: installation_result
+    - name: Download kubectl
+      get_url:
+        url: "https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version.stdout }}/bin/linux/amd64/kubectl"
+        dest: /usr/local/bin/kubectl
+        mode: '0755'
+    
+    - name: Refresh user groups
+      command: newgrp docker
+      become_user: vagrant
+    
+    - name: Start Minikube with Docker driver
+      command: minikube start --driver=docker
+      become_user: vagrant
 
-    - name: Check k3d version
-      ansible.builtin.command: k3d version
-      register: version_result
-      changed_when: false
+    - name: Enable Minikube ingress addon
+      command: minikube addons enable ingress
+      become_user: vagrant
 
-    - name: Print k3d version
-      ansible.builtin.debug:
-        msg: "{{ version_result.stdout_lines }}"
+    - name: Verify Minikube cluster information
+      command: kubectl cluster-info
+      register: cluster_info_output
+      become_user: vagrant
 
-    - name: Create a k3d cluster
-      shell: k3d cluster create mycluster --api-port 192.168.57.10:6550 -p "8080:80@loadbalancer" --agents 0
-
-    - name: Verify k3d cluster is running
-      shell: k3d cluster list
-      register: cluster_list
-
-    - name: Check if the k3d cluster is listed
-      assert:
-        that:
-          - "'mycluster' in cluster_list.stdout"
-        fail_msg: "The k3d cluster 'mycluster' is not running."
-        success_msg: "The k3d cluster 'mycluster' is successfully running."
-
-    # - name: Install Helm
-    #   shell: |
-    #     curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
-
-    # - name: Add Helm repo for Prometheus
-    #   community.general.helm_repository:
-    #     name: prometheus-community
-    #     repo_url: https://prometheus-community.github.io/helm-charts
-    #     state: present
-
-    # - name: Update Helm repo
-    #   community.general.helm:
-    #     command: repo_update
-
-    # - name: Deploy Prometheus
-    #   shell: helm install prometheus stable/prometheus --set service.type=NodePort
-
-    # - name: Deploy Grafana
-    #   shell: helm install grafana stable/grafana --set service.type=NodePort
-
-    # - name: Deploy Kubernetes Dashboard
-    #   shell: helm install kubernetes-dashboard kubernetes-dashboard/kubernetes-dashboard
+    - name: Display cluster information
+      debug:
+        var: cluster_info_output.stdout
