i used to pray for times like this

--- a/playbook_controller.yml
+++ b/playbook_controller.yml
@@ -2,9 +2,15 @@
 - name: Set up K3s server
   hosts: controller
   become: yes
+  vars:
+    master_node_ip: "192.168.57.10"
+
   tasks:
-    - name: Install K3s server
-      shell: curl -sfL https://get.k3s.io | sh -
+    - name: Install K3s server with TLS and external IP settings
+      shell: |
+        curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--tls-san {{ master_node_ip }} --node-external-ip {{ master_node_ip }}" K3S_NODE_NAME="$HOSTNAME" K3S_KUBECONFIG_MODE="644" sh -
+      args:
+        executable: /bin/bash
 
     - name: Wait for K3s server to be ready
       shell: |
