--- a/kubernetes/deployment-app-service.yml
+++ b/kubernetes/deployment-app-service.yml
@@ -15,7 +15,10 @@ spec:
         app: app-service
     spec:
       containers:
-      - name: app-service
-        image: ghcr.io/remla2024-team9/app-service:latest
-        ports:
-        - containerPort: 8080
+        - name: app-service
+          image: ghcr.io/remla2024-team9/app-service:latest
+          ports:
+            - containerPort: 8080
+          env:
+            - name: MODEL_SERVICE_URL
+              value: http://model-service:5000
