--- a/kubernetes/ingress.yml
+++ b/kubernetes/ingress.yml
@@ -3,30 +3,31 @@ kind: Ingress
 metadata:
   name: app-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
-  - http:
-      paths:
-      - path: /frontend
-        pathType: Prefix
-        backend:
-          service:
-            name: app-frontend
-            port:
-              number: 3000
-      - path: /api
-        pathType: Prefix
-        backend:
-          service:
-            name: app-service
-            port:
-              number: 8080
-      - path: /model
-        pathType: Prefix
-        backend:
-          service:
-            name: model-service
-            port:
-              number: 5000
+    - http:
+        paths:
+          - path: /frontend(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: app-frontend
+                port:
+                  number: 3000
+          - path: /api(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: app-service
+                port:
+                  number: 8080
+          - path: /model(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: model-service
+                port:
+                  number: 5000
