--- a/kubernetes/ingress.yml
+++ b/kubernetes/ingress.yml
@@ -4,28 +4,28 @@ metadata:
   name: app-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /frontend(/|$)(.*)
-            pathType: ImplementationSpecific
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: app-frontend
                 port:
-                  number: 3000
-          - path: /api(/|$)(.*)
-            pathType: ImplementationSpecific
+                  number: 80
+          - path: /service
+            pathType: Prefix
             backend:
               service:
                 name: app-service
                 port:
                   number: 8080
-          - path: /model(/|$)(.*)
-            pathType: ImplementationSpecific
+          - path: /model
+            pathType: Prefix
             backend:
               service:
                 name: model-service
