Fixed 502 bad gateway

--- a/kubernetes/deployment-app-frontend.yml
+++ b/kubernetes/deployment-app-frontend.yml
@@ -16,9 +16,9 @@ spec:
     spec:
       containers:
         - name: app-frontend
-          image: samuelribaric/appfrontend:latest  #ghcr.io/remla2024-team9/app-frontend:latest
+          image: erenaydoslue/remla:latest #samuelribaric/appfrontend:latest  #ghcr.io/remla2024-team9/app-frontend:latest
           ports:
             - containerPort: 3000
           env:
             - name: REACT_APP_BACKEND_URL
-              value: http://app-service:8080
+              value: "http://192.168.57.10/api"
