--- a/kubernetes/service-app-service.yml
+++ b/kubernetes/service-app-service.yml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-service
+  namespace: default
 spec:
   selector:
     app: app-service
+  type: ClusterIP
   ports:
     - protocol: TCP
       port: 8080
