--- a/kubernetes/service-model-service.yml
+++ b/kubernetes/service-model-service.yml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: model-service
+  namespace: default
 spec:
   selector:
     app: model-service
+  type: ClusterIP
   ports:
     - protocol: TCP
       port: 5000
