--- a/kubernetes/deployment-app-frontend.yml
+++ b/kubernetes/deployment-app-frontend.yml
@@ -19,6 +19,19 @@ spec:
           image: erenaydoslue/remla:latest #samuelribaric/appfrontend:latest  #ghcr.io/remla2024-team9/app-frontend:latest
           ports:
             - containerPort: 3000
-          env:
-            - name: REACT_APP_BACKEND_URL
-              value: "http://192.168.57.10/api"
+          volumeMounts:
+            # - name: app-config-volume
+            #   mountPath: /usr/share/nginx/html/appConfig.js
+            #   subPath: appConfig.js
+
+            - name: app-nginx-volume
+              mountPath: /etc/nginx/conf.d/default.conf
+              subPath: default.conf
+
+      volumes:
+        # - name: app-config-volume
+        #   configMap:
+        #     name: frontend-env-vars
+        - name: app-nginx-volume
+          configMap:
+            name: frontend-nginx-conf
