Changed model-service url

--- a/kubernetes/deployment-app-service.yml
+++ b/kubernetes/deployment-app-service.yml
@@ -16,9 +16,9 @@ spec:
     spec:
       containers:
         - name: app-service
-          image: ghcr.io/remla2024-team9/app-service:latest
+          image: erenaydoslue/app-service:latest
           ports:
             - containerPort: 8080
           env:
             - name: MODEL_SERVICE_URL
-              value: http://model-service:5000
+              value: "http://model-service.svc.cluster.local:5000"
