--- a/kubernetes/deployment-app-frontend.yml
+++ b/kubernetes/deployment-app-frontend.yml
@@ -16,22 +16,14 @@ spec:
     spec:
       containers:
         - name: app-frontend
-          image: erenaydoslue/remla:latest #samuelribaric/appfrontend:latest  #ghcr.io/remla2024-team9/app-frontend:latest
+          image: erenaydoslue/remla:latest
           ports:
             - containerPort: 3000
           volumeMounts:
-            # - name: app-config-volume
-            #   mountPath: /usr/share/nginx/html/appConfig.js
-            #   subPath: appConfig.js
-
             - name: app-nginx-volume
               mountPath: /etc/nginx/conf.d/default.conf
               subPath: default.conf
-
       volumes:
-        # - name: app-config-volume
-        #   configMap:
-        #     name: frontend-env-vars
         - name: app-nginx-volume
           configMap:
             name: frontend-nginx-conf
