--- a/playbook_controller.yml
+++ b/playbook_controller.yml
@@ -69,8 +69,10 @@
       shell: kubectl apply -f /vagrant/kubernetes/
       args:
         executable: /bin/bash
-       
-       
+    
+    - name: Deploy Ingress
+      shell: kubectl apply -f /vagrant/kubernetes/ingress.yml
+
     - name: Install Helm
       shell: curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
