added istio to playbook among other things

--- a/playbook_controller.yml
+++ b/playbook_controller.yml
@@ -28,7 +28,6 @@
         dest: /vagrant/shared_folder/node-token
         flat: yes
 
-
     - name: Create .kube directory
       file:
         path: /home/vagrant/.kube
@@ -40,38 +39,6 @@
         k3s kubectl config view --raw > /home/vagrant/.kube/config
       args:
         executable: /bin/bash
-
-    - name: Label the node for ingress-nginx
-      shell: |
-        kubectl label nodes $(kubectl get nodes -o jsonpath='{.items[0].metadata.name}') ingress-ready=true kubernetes.io/os=linux
-      args:
-        executable: /bin/bash
-
-    - name: Create namespace for ingress-nginx
-      shell: kubectl create namespace ingress-nginx || true
-      args:
-        executable: /bin/bash
-
-    - name: Install NGINX Ingress Controller
-      shell: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
-      args:
-        executable: /bin/bash
-
-    - name: Wait for NGINX Ingress Controller to be ready
-      shell: |
-        while [[ $(kubectl get pods -n ingress-nginx -l app.kubernetes.io/component=controller -o 'jsonpath={..status.conditions[?(@.type=="Ready")].status}') != "True" ]]; do
-          echo "waiting for ingress controller to be ready" && sleep 10;
-        done
-      args:
-        executable: /bin/bash
-
-    - name: Deploy application to Kubernetes
-      shell: kubectl apply -f /vagrant/kubernetes/
-      args:
-        executable: /bin/bash
-    
-    - name: Deploy Ingress
-      shell: kubectl apply -f /vagrant/kubernetes/ingress.yml
 
     - name: Install Helm
       shell: curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
@@ -87,5 +54,45 @@
       args:
         executable: /bin/bash
       environment:
-        KUBECONFIG: /etc/rancher/k3s/k3s.yaml       
+        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
 
+    - name: Download Istio
+      shell: curl -L https://istio.io/downloadIstio | sh -
+      args:
+        executable: /bin/bash
+
+    - name: Install Istio
+      shell: istio-1.22.0/bin/istioctl install --set profile=demo -y
+      args:
+        chdir: /vagrant
+        executable: /bin/bash
+      environment:
+        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
+
+    - name: Label the namespace for Istio injection
+      shell: kubectl label namespace default istio-injection=enabled
+      args:
+        executable: /bin/bash
+      environment:
+        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
+
+    - name: Deploy application to Kubernetes
+      shell: kubectl apply -f /vagrant/kubernetes/
+      args:
+        executable: /bin/bash
+      environment:
+        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
+
+    - name: Apply Istio Gateway
+      shell: kubectl apply -f /vagrant/kubernetes/gateway.yml
+      args:
+        executable: /bin/bash
+      environment:
+        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
+
+    - name: Apply Istio Virtual Service
+      shell: kubectl apply -f /vagrant/kubernetes/virtualservice.yml
+      args:
+        executable: /bin/bash
+      environment:
+        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
