--- a/kubernetes/deployment-app-service.yml
+++ b/kubernetes/deployment-app-service.yml
@@ -4,6 +4,7 @@ metadata:
   name: app-service
   labels:
     app: app-service
+    version: v1
 spec:
   replicas: 1
   selector:
@@ -13,6 +14,7 @@ spec:
     metadata:
       labels:
         app: app-service
+        version: v1
     spec:
       containers:
         - name: app-service
