--- a/kubernetes/deployment-model-service.yml
+++ b/kubernetes/deployment-model-service.yml
@@ -2,7 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: model-service
-  namespace: default
+  labels:
+    app: model-service
+    version: v1
 spec:
   replicas: 1
   selector:
@@ -12,6 +14,7 @@ spec:
     metadata:
       labels:
         app: model-service
+        version: v1
     spec:
       containers:
         - name: model-service
