--- a/kubernetes/configure-frontend.yml
+++ b/kubernetes/configure-frontend.yml
@@ -5,7 +5,7 @@ metadata:
 data:
   appConfig.js: |
     window.appConfig = {
-        REACT_APP_BACKEND_URL: "http://app-service.svc.cluster.local:8080"
+        REACT_APP_BACKEND_URL: "http://app-service.default.svc.cluster.local:8080"
     };
 
 ---
