--- a/kubernetes/deployment-app-service.yml
+++ b/kubernetes/deployment-app-service.yml
@@ -24,3 +24,15 @@ spec:
           env:
             - name: MODEL_SERVICE_URL
               value: "http://model-service.default.svc.cluster.local:5000"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-service
+spec:
+  selector:
+    app: app-service
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
