--- a/kubernetes/service-app-frontend.yml
+++ b/kubernetes/service-app-frontend.yml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-frontend
-  namespace: default
 spec:
   selector:
     app: app-frontend
@@ -10,4 +9,4 @@ spec:
     - protocol: TCP
       port: 3000
       targetPort: 3000
-  type: LoadBalancer
+  type: ClusterIP
