removed ingress.yml

--- a/kubernetes/deployment-app-frontend.yml
+++ b/kubernetes/deployment-app-frontend.yml
@@ -4,7 +4,7 @@ metadata:
   name: app-frontend
   labels:
     app: app-frontend
-    version: v1 # 
+    version: v1 
 spec:
   replicas: 1
   selector:
